kubes/blog/tech/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-tech-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - blog.tech.atelier.run
      secretName: blog-tech-web
  rules:
    - host: blog.tech.atelier.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-tech-web
                port:
                  number: 80
